// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save and share bar component email icon when tokenising with loading state while network request is fetching data 1`] = `
<BarItem
  dataTestId="email-share"
  url=""
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "borderRadius": 9999,
        "height": 40,
        "overflow": "hidden",
        "width": 40,
      }
    }
  />
</BarItem>
`;

exports[`save and share bar component save and share bar renders correctly when logged in 1`] = `
<View
  data-testid="save-and-share-bar"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "space-between",
      "paddingVertical": "10px",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": 14,
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </Text>
    <BarItem
      dataTestId="email-share"
      url=""
    >
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      dataTestId="share-twitter"
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      dataTestId="share-facebook"
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      dataTestId="copy-to-clickboard"
      hoverColor="#1D1D1B"
      url=""
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </View>
  <View
    data-testid="save-star"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
        "marginLeft": "auto",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": 14,
          "marginRight": "10px",
          "textAlign": "right",
          "transform": Array [
            Object {
              "translateY": "9%",
            },
          ],
        }
      }
    >
      Save
    </Text>
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "borderRadius": 9999,
          "height": 40,
          "marginLeft": "5px",
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
  </View>
</View>
`;

exports[`save and share bar component save and share bar renders correctly when not logged in 1`] = `
<View
  data-testid="save-and-share-bar"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "space-between",
      "paddingVertical": "10px",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": 14,
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </Text>
    <BarItem
      dataTestId="email-share"
      url=""
    >
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      dataTestId="share-twitter"
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      dataTestId="share-facebook"
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      dataTestId="copy-to-clickboard"
      hoverColor="#1D1D1B"
      url=""
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </View>
</View>
`;
